@@ -1,5 +1,11 @@
 2012-05-03 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
+	* src/hc08/main.c,
+	  src/hc08/ralloc.c:
+	  Revive old register allocator for --oldralloc.
+
+2012-05-03 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
 	* src/SDCCmain.c,
 	  src/z80/gen.c,
 	  src/z80/ralloc.c,
